--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/henrysssilveira/Teste-API#readme",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "multer": "^1.4.5-lts.1",
+    "puppeteer": "^22.0.0"
   }
 }
